--- a/index.html
+++ b/index.html
@@ -4,9 +4,108 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tanya Gonzalez's Portfolio</title>
+    <link rel="stylesheet" href="assets/style.css"> 
 </head>
+
 <body>
+    <!-- header and nav-->
+    <header>
+            <h1>
+        <a href="index.html"> TANYA GONZALEZ</a>
+      </h1>
+        <nav> <!--nav starts here-->
+            <ul> <!--unordered list-->
+             <li> <!--list item-->
+               <a href="#about-me">ABOUT ME</a> <!--anchor-->
+              </li>
+              <li>
+                <a href="#work">WORK</a>
+              </li>
+              <li>
+                <a href="#contact-me">CONTACT ME</a>
+              </li>
+            </ul>
+          </nav>
+    </header>
+<!--section for hero-->
+<section class="hero">
+    <img src="./flex.box.image.sample.webp" alt="image">
+ 
+</section> <!--end hero section-->
+
+   <!-- about me section start -->
+   <section id="about-me" class="about-me">
+    <div class="title">
+        <h2>About Me</h2>
+    </div>
     
+    <div>
+        <p>
+          Melissa Moreno was born in Bridgeport, CT. I was in the marching band and learned how to play the clarinet and played it for 15 years.
+            <br><br>
+                    </p>
+    </div>
+</section> <!--about me section ends-->
+
+<!-- my work section start -->
+<section id="my-work" class="my-work">
+    <div class="title"><h2>My Work</h2></div>
+    <div class = "projects-grid-wrapper">
+        <div class="projects-grid">
+            <a href="https://github.com/mets0811/Sauce1990" target="_blank" class="project horiseon">
+                <div class="project-name">
+                    <h3>Horiseon</h3>
+                    <p>HTML/CSS</p>
+                </div>
+            </a>
+            <a href="https://github.com/mets0811/run-buddy" target="_blank" class="project run-buddy-1">
+                <div class="project-name">
+                    <h3>Run Buddy 1</h3>
+                    <p>HTML/CSS</p>
+                </div>
+            </a>
+            <a href="https://github.com/mets0811/run-buddy" target="_blank" class="project run-buddy-2">
+                <div class="project-name">
+                    <h3>Run Buddy 2</h3>
+                    <p>HTML/CSS</p>
+                </div>
+            </a>
+            <a href="https://github.com/mets0811/run-buddy" target="_blank" class="project run-buddy-3">
+                <div class="project-name">
+                    <h3>Run Buddy 3</h3>
+                    <p>HTML/CSS</p>
+                </div>
+            </a>
+            <a href="#" target="_blank"  class="project portfolio">
+                <div class="project-name">
+                    <h3>Portfolio</h3>
+                    <p>HTML/CSS</p>
+                </div>
+            </a>
+        </div>
+    </div> <!--my work ends-->
+</section>
+
+<!-- contact info section -->
+<footer id="contact-me">
+    <div class="title"><h2>Contact Me</h2></div>
+    <div class="content-wrapper">
+        <div id="contact-list">
+            <ul>
+              <li>
+                <p>+1203-430-7974</p>
+            </li>
+                <li>
+                    <a href="melissa0811@icloud.com">Email</a>
+                </li>
+                <li>
+                    <a href="https://github.com/mets0811" target="_blank">GitHub</a>
+                </li>
+                
+            </ul>
+        </div>
+    </div>
+</footer> <!--my footer ends-->
 </body>
 </html>
