--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tanya Gonzalez's Portfolio</title>
+    <title>Melissa Moreno Portfolio</title>
     <link rel="stylesheet" href="assets/style.css"> 
 </head>
 
@@ -12,7 +12,7 @@
     <!-- header and nav-->
     <header>
             <h1>
-        <a href="index.html"> TANYA GONZALEZ</a>
+        <a href="index.html"> Melissa Moreno</a>
       </h1>
         <nav> <!--nav starts here-->
             <ul> <!--unordered list-->
