--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Melissa Moreno Portfolio</title>
-    <link rel="stylesheet" href="assets/style.css"> 
+    <title>Melissa's Portfolio</title>
+    <link rel="stylesheet" href="./style.css"> 
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                <a href="#about-me">ABOUT ME</a> <!--anchor-->
               </li>
               <li>
-                <a href="#work">WORK</a>
+                <a href="#my-work">MY WORK</a>
               </li>
               <li>
                 <a href="#contact-me">CONTACT ME</a>
@@ -49,7 +49,7 @@
 </section> <!--about me section ends-->
 
 <!-- my work section start -->
-<section id="my-work" class="my-work">
+<section id="my-work" class="My-work">
     <div class="title"><h2>My Work</h2></div>
     <div class = "projects-grid-wrapper">
         <div class="projects-grid">
