--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="title"><h2>My Work</h2></div>
     <div class = "projects-grid-wrapper">
         <div class="projects-grid">
-            <a href="https://github.com/mets0811/Sauce1990" target="_blank" class="project horiseon">
+            <a href="../portfolio/horiseon.PNG" target="_blank" class="project horiseon">
                 <div class="project-name">
                     <h3>Horiseon</h3>
                     <p>HTML/CSS</p>
