--- a/index.html
+++ b/index.html
@@ -92,18 +92,9 @@
     <div class="title"><h2>Contact Me</h2></div>
     <div class="content-wrapper">
         <div id="contact-list">
-            <ul>
-              <li>
-                <p>+1203-430-7974</p>
-            </li>
-                <li>
-                    <a href="melissa0811@icloud.com">Email</a>
-                </li>
-                <li>
-                    <a href="https://github.com/mets0811" target="_blank">GitHub</a>
-                </li>
-                
-            </ul>
+            <p>+1203-430-7974</p>
+            <a href="mailto:melissa0811@icloud.com">Email</a>
+            <a href="https://github.com/mets0811" target="_blank">GitHub</a>
         </div>
     </div>
 </footer> <!--my footer ends-->
