--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Melissa's Portfolio</title>
-    <link rel="stylesheet" href="./style.css"> 
+    <link rel="stylesheet" href="./assets/css/style.css"> 
 </head>
 
 <body>
@@ -30,7 +30,7 @@
     </header>
 <!--section for hero-->
 <section class="hero">
-    <img src="./flex.box.image.sample.webp" alt="image">
+    <img src="./assets/images/flex.box.image.sample.webp" alt="image">
  
 </section> <!--end hero section-->
 
@@ -53,7 +53,7 @@
     <div class="title"><h2>My Work</h2></div>
     <div class = "projects-grid-wrapper">
         <div class="projects-grid">
-            <a href="../portfolio/horiseon.PNG" target="_blank" class="project horiseon">
+            <a href="./assets/images/horiseon.PNG" target="_blank" class="project horiseon">
                 <div class="project-name">
                     <h3>Horiseon</h3>
                     <p>HTML/CSS</p>
