added project to portfolio

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <p>HTML/CSS</p>
                 </div>
             </a>
-            <a href="https://github.com/mets0811/run-buddy" target="_blank" class="project run-buddy-3">
+            <a href="https://spencerhulse.github.io/newJobs-you/landingpage.html" target="_blank" class="project run-buddy-3">
                 <div class="project-name">
                     <h3>Run Buddy 3</h3>
                     <p>HTML/CSS</p>
