--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                     <p>HTML/CSS</p>
                 </div>
             </a>
-            <a href="https://spencerhulse.github.io/newJobs-you/landingpage.html" target="_blank" class="project run-buddy-3">
+            <a href="https://spencerhulse.github.io/newJobs-you/landingpage.html" target="_blank" class="group project">
                 <div class="project-name">
-                    <h3>Run Buddy 3</h3>
+                    <h3>New Jobs (you)</h3>
                     <p>HTML/CSS</p>
                 </div>
             </a>
