--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <p>HTML/CSS</p>
                 </div>
             </a>
-            <a href="https://github.com/mets0811/run-buddy" target="_blank" class="project run-buddy-2">
+            <a href="https://github.com/DonL44/newage-datingblog" target="_blank" class="project run-buddy-2">
                 <div class="project-name">
                     <h3>Run Buddy 2</h3>
                     <p>HTML/CSS</p>
